test/Harper/Tests/Bad/issue007_immutableAss.har
fun :: Integer -> Integer;
fun n = {
    (x :: Integer) = n;
    x += 1;
    return x;
};

main :: Integer;
main = fun 42;